# OpenGL---Studies-Tutorials-Projects

./: README.md
base_project/: CMakeLists.txt
base_project/Libraries/Input Library/: Mouse.h
base_project/Libraries/Output Library/: Window.h
base_project/src/: main.cpp
edx_computer_graphics/: README.md
edx_computer_graphics/hw0-windows/hw0-windows/: mytest3.cpp
edx_computer_graphics/hw0-windows/hw0-windows/Debug/: hw0-windows.exe.recipe  hw0-windows.ilk  vc142.idb
edx_computer_graphics/hw0-windows/hw0-windows/Debug/hw0-windows.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  (+3 more)
learnopengl/: NOTES.md  README.md
learnopengl/basic_lighting/src/: .main.cpp.swp  camera.hpp  main.cpp  shader.hpp
learnopengl/basic_lighting/src/shaders/: cube.fs  cube.vs
learnopengl/camera/src/: main.cpp
learnopengl/coordinate_systems/src/: main.cpp
learnopengl/hello_triangle/: CMakeLists.txt
learnopengl/hello_triangle/src/: main.cpp
learnopengl/light_casters/src/: main.cpp  shader.hpp
learnopengl/light_casters/src/shaders/: cube.fs
learnopengl/lighting_colors/src/: .main.cpp.swp  main.cpp
learnopengl/lighting_colors/src/shaders/: .shader.fs.swp  .shader.vs.swp  cube.fs
learnopengl/lighting_maps/src/: main.cpp
learnopengl/lighting_maps/src/shaders/: cube.fs  cube.vs
learnopengl/lighting_material/src/: .main.cpp.swp  main.cpp
learnopengl/lighting_material/src/shaders/: cube.fs  cube.vs
learnopengl/model_loading/: .gitignore  CMakeLists.txt  build.bat  build_dependencies.bat  model_loading.sln
learnopengl/model_loading/model_loading/: Main.cpp  Shader.cpp  Shader.h  model_loading.vcxproj  model_loading.vcxproj.filters
learnopengl/model_loading/model_loading/shaders/: model.fs  model.vs
learnopengl/model_loading/model_loading/x64/Debug/: model_loading.exe.recipe  model_loading.ilk  vc143.idb
learnopengl/model_loading/model_loading/x64/Debug/model_loading.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  model_loading.lastbuildstate
learnopengl/model_loading/src/: .main.cpp.swp  camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  temporary_vertices.h  texture.cpp  texture.h
learnopengl/model_loading/src/shaders/: shader.fs  shader.vs
learnopengl/multiple_lights/src/: .main.cpp.swp  main.cpp
learnopengl/multiple_lights/src/shaders/: cube.fs
learnopengl/playground/src/: main.cpp
learnopengl/shader_class/src/: main.cpp  shader.hpp
learnopengl/shader_class/src/shaders/: shader_exercise_2.vs  shader_exercise_3.vs
learnopengl/shaders/src/: main.cpp
learnopengl/textures/src/: main.cpp  shader.hpp
learnopengl/textures/src/shaders/: shader.fs  shader.vs
learnopengl/transformations/binaries/: CMakeCache.txt  Makefile  cmake_install.cmake
learnopengl/transformations/src/: Shader.hpp  main.cpp
learnopengl/transformations/src/shaders/: shader.fs
opengl-gameprogramming/: PROGRESS.md  README.md
opengl-gameprogramming/base_project/: Window.h  compile_run.sh  main.cpp
opengl-gameprogramming/base_project/Architecture/: Base Project Architecture.drawio
opengl-gameprogramming/base_project/Libraries/Draw Library/: Draw.h
opengl-gameprogramming/base_project/Libraries/Input Library/: Keyboard.h
opengl-gameprogramming/base_project/headers/: Draw.h  Keyboard.h  Mouse.h  Window.h
opengl-gameprogramming/chapter_1/on_your_own/: main.cpp
opengl-gameprogramming/chapter_2/an_opengl_application/: compile_run.sh  main.cpp
opengl-gameprogramming/chapter_3/drawing_grid/headers/: Window.h
opengl-gameprogramming/chapter_3/drawing_lines_3D/headers/: Mouse.h  Window.h
opengl-gameprogramming/chapter_3/drawing_points_3D/headers/: Window.h
opengl-gameprogramming/chapter_3/on_your_own/headers/: Window.h
opengl-gameprogramming/chapter_4/on_your_own/headers/: Draw.h  Window.h
opengl-gameprogramming/chapter_4/rotation_example/: main.cpp
opengl-gameprogramming/chapter_4/rotation_example/headers/: Draw.h  Keyboard.h  Mouse.h
opengl-gameprogramming/chapter_4/scaling_example/headers/: Draw.h  Window.h
opengl-gameprogramming/chapter_4/translation_example/: main.cpp
opengl-gameprogramming/chapter_4/translation_example/headers/: Draw.h
tutorial/clipboard_input_output/: main.cpp
tutorial/color/: main.cpp
tutorial/cube/: main.cpp
tutorial/first_dot/: main.cpp
tutorial/hollow_circle/: main.cpp
tutorial/joystick_input/: main.cpp
tutorial/keyboard_input/: main.cpp
tutorial/line/: main.cpp
tutorial/line_strip_loop/: main.cpp
tutorial/mouse_input/: main.cpp
tutorial/open_window/: main.cpp
tutorial/path_drop_input/: main.cpp
tutorial/point/: main.cpp
tutorial/polygon/: main.cpp
tutorial/quad/: main.cpp
tutorial/quad_strip/: main.cpp
tutorial/text_input/: main.cpp
tutorial/time_input/: main.cpp
tutorial/triangle/: main.cpp
tutorial/triangle_fan/: main.cpp
tutorial/triangle_strip/: main.cpp
(+15 files in other folders)
